Make sure playtest games are only visible by playtesters