@@ -21,7 +21,7 @@ public class DeckPageBean {
         String playerName = model.getPlayerName();
         this.selectedDeck = model.getDeck();
         this.contents = model.getContents();
-        this.tags = JolAdmin.INSTANCE.getAvailableGameFormats(playerName).stream().map(GameFormat::getLabel).collect(Collectors.toList());
+        this.tags = JolAdmin.INSTANCE.getAvailableGameFormats(playerName).stream().map(GameFormat::getLabel).toList();
         this.deckFilter = model.getDeckFilter();
     }
 
